Template/layout.css
/****************************************************************
RESET
*****************************************************************/

html {
	box-sizing: border-box;
	font-family: "Open Sans";
}

*, *:before, *:after {
	box-sizing: inherit;
}

/****************************************************************
HEADER
*****************************************************************/

.header {
	background-color: green;
	height: 80px;
	position: fixed;
	top: 0;
	right: 0;
	left: 0;
	z-index: 10000;
}

header {
	position: relative;
	height: 100%;
	width: 100%;
}

header nav {
	display: flex;
	justify-content: center;
	/*text-align: center;*/
	/*margin: auto;*/
}

header nav a {
	color: black;
	text-decoration: none;
	display: inline-block;
}

nav .logo, .settings, .logout {
	padding: 20px 10px;
	position: absolute;
	top: 10px;
}

nav .logo {
	left: 10px;
}

nav .main {
	padding: 20px 10px;
}

nav .settings {
	padding: 20px 20px;
	right: 61px;
}

nav .logout {
	right: 10px;
}

/****************************************************************
HERO SECTION
*****************************************************************/

.hero {
	background-color: yellow;
	height: 420px;
	position: relative;
	margin-top: 75px;
}

.hero h1 {
	position: absolute;
	top: 30px;
	width: 100%;
	text-align: center;
}

.hero button {
	background-color: #EA501A;
	color: white;
	font-size: 1em;
	width: 85px;
	padding: 15px 0;
	border: none;
	border-radius: 3px;
	position: absolute;
	bottom: 115px;
}

.sign-up {
	left: 47%;
	transform: translate(-50%);
}

.login {
	right: 47%;
	transform: translate(50%);

}

/****************************************************************
MAIN FOOTER
*****************************************************************/

.inspire {
	position: absolute;
	bottom: 65px;
	width: 100%;
	text-align: center;
	
}

/****************************************************************
MAIN FOOTER
*****************************************************************/

.main-footer {
	background-color: gray;
	height: 100px;
}

footer {
	position: relative;
	height: 100%;
	width: 100%;
}

footer div {
	display: flex;
	justify-content: center;
	align-items: baseline;
}

.main-footer div a {
	color: black;
	text-decoration: none;
	display: inline-block;
	padding: 20px 40px;
}


.fa-twitter-square {
	color: #5EA9DD;
}

.fa-facebook-official {
	color: #3B5998;
}

.fa-instagram {
	color: #4C7A9F;
}

.fa-flickr {
	color: ;
}

.fa-tumblr-square {
	color: #56BC8A;
}

/****************************************************************
COVERFLOW
*****************************************************************/
.coverflow {
	background-color: pink;
	height: 420px;
	width: 100%;
}



/****************************************************************
CONTENT
*****************************************************************/

.main-content {
	background-color: lightblue;
	height: 420px;
	width: 100%;
	margin: -20px 0;
}

.main-media {
	background-size: cover;
	background-color: blue;
	margin-top: 3%;
	margin-left: 30px;
	height: 80%;
	width: 40%;
	float: left;
}

.main-description {
	margin-left: 45%;
	margin-right: 30px;
}

.main-description h3 {
	padding-top: 40px;
}

